--- a/style.css
+++ b/style.css
@@ -109,12 +109,10 @@ h6 {
 footer {
     background-color: #FFFFFF;
      text-align: center;
-    padding: 5vw 5vw 10vw 5vw;
+    padding: 5vw 5vw 6vw 5vw;
     margin-top: -3vw;
     color: #E86F43;
 }
-
-
 
 h5 {
    font-family: 'bauhaus_93regular';
@@ -122,6 +120,11 @@ h5 {
     text-align: center;
     font-weight: 100;
     color: #2F363E
+}
+.some_ikoner img {
+    width: 10%;
+    float: center;
+   margin: 8vw 3vw 5vw 3vw;
 }
 
 /* FORSIDE */
@@ -174,6 +177,8 @@ h5 {
     display: none;
 }
 
+/* OM OS */
+
 .omos {
     background-color: #2F363E;
     display: flex;
@@ -203,8 +208,87 @@ h5 {
 }
 .omos_overskrift {
     position: relative;
-     z-index: 3;
+    z-index: 3;
 }
+
+/* TILMELDING */
+
+.tilmelding {
+    margin-top: 20vw;
+}
+input {
+    border: none;
+    background-color: #2F363E;
+   padding: 4vw;
+    margin: 2vw 2vw 7vw 2vw;
+    cursor: pointer;
+    text-align: left;
+
+}
+
+input a {
+    font-family: Abadi MT Condensed Light, sans-serif;
+    font-weight: 100;
+    text-decoration: none;
+    font-size: 0.7rem;
+}
+
+input placeholder a {
+
+}
+
+.tilmeldbutton a {
+    font-family: Abadi MT Condensed Light, sans-serif;
+    text-decoration: none;
+    color: #2F363E;
+    font-size: 0.9rem;
+    font-weight: 100;
+    color: #2F363E;
+    text-decoration: none;
+
+}
+.tilmeldbutton {
+    background-color: #E86F43;
+    padding: 4vw;
+    margin: 2vw 2vw 7vw 2vw;
+    cursor: pointer;
+    text-align: center;
+
+}
+
+.klistremaerke_tekst {
+    text-align: center;
+    margin: 15vw 3vw 3vw 3vw;
+}
+.arrow {
+    margin: 0 auto;
+    width: 40%;
+    display: block;
+
+}
+.movedown {
+    position: relative;
+    animation-name: example;
+  animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes example {
+  0%   {left:0px; top:0px;}
+  100% {left:0px; top:10px;}
+0%   {left:0px; top:0px;}
+}
+
+.merch_sticker {
+    width: 100%;
+    margin-bottom: 10vw;
+}
+.merch {
+    text-align: center;
+    margin: 25vw 4vw 5vw 4vw;
+}
+
 
 @media only screen and (min-width:750px) {
     .burger-button {
@@ -214,27 +298,34 @@ h5 {
         visibility: visible;
     }
     #menu a {
-        margin-right: 2.3vw;
+        margin-left: 2.3vw;
         display: inline-block;
-        flex-direction: row-reverse;
         margin-top: 0.7vw;
         padding-bottom: 1vw;
         color: #2F363E;
-        float: right;
         border: none;
 
 }
     #menu {
         background-color: #F7F5F5;
-        top: 1vw;
-        right: 2vw;
-        width: 30vw;
+        top: 0.6vw;
+        right: 0;
+        width: 50vw;
         height: 0vw;
 
     }
     header {
-        height: 12vw;
+        height: 11vw;
     }
+
+
+    .kampagnelogo h2 {
+        margin-top: -1vw;
+    }
+    .button {
+        margin-top: 50vw;
+    }
+
     #start_sektion {
         margin-top: 10vw;
         padding: 0;
@@ -246,7 +337,7 @@ h5 {
     }
 
     .button {
-        margin: 40vw 30vw 0vw 30vw;
+        margin: 50vw 30vw 0vw 30vw;
         border-radius: 50px;
         padding: 2vw;
 
@@ -261,9 +352,10 @@ h5 {
     }
     .logo2 {
         visibility: visible;
-        width: 230px;
-        margin-top: 1vw;
+        width: 190px;
+        margin-top: 0.5vw;
         cursor: pointer;
+        display: block;
 
     }
     .infografik {
@@ -272,7 +364,13 @@ h5 {
     .infografik2 img {
         visibility: visible;
         width: 100%;
+
     }
+    .infografik2 {
+         display: block;
+    }
+
+
     #infotekst {
         padding: 5vw 3vw 5vw 3vw;
     }
@@ -281,12 +379,70 @@ h5 {
     }
 
     #menu a:hover {
-        color: #FFFFFF;
+        color: #E86F43;
 
      }
+    #omos {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .omos_sektion {
+        flex-grow: 400px;
+        flex-basis: 1;
+    }
+
+    .some_ikoner img {
+        width: 10%;
+        float: center;
+        display: block;
+        margin: 2vw 15vw 2vw 15vw;
 
 }
 
+    /* TILMELDING */
+
+    .merch {
+        margin-top: 15vw;
+    }
+    .tilmelding {
+        margin-top: 0vw;
+        flex-grow: 200px;
+        flex-basis: 1:
+
+    }
+    input {
+        width: 20vw;
+        padding: 1.5vw;
+        margin-bottom: 1vw;
+
+    }
+    .tilmeldbutton {
+        width: 20vw;
+        padding: 1.5vw;
+    }
+    .indhold_tilmeld {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .arrow {
+        display: none;
+
+    }
+    .merch_sticker {
+        width: 30%;
+        flex-grow: 200px;
+        flex-basis: 1:
+    }
+    footer {
+        height: 15vw;
+    }
+    klistremaerke_tekst {
+        flex-grow: 200px;
+        flex-basis: 1:
+    }
+
+}
 @media only screen and (min-width:1100px) {
     header {
         height: 8vw;
