--- a/style.css
+++ b/style.css
@@ -17,17 +17,21 @@ body {
     width: 200px;
     cursor: pointer;
     margin-top: 3vw;
-
 }
 
 .burger-button img {
-    width: 40px;
+    width: 25px;
     position: absolute;
     right: 4vw;
     top: 5vw;
     cursor: pointer;
 }
-
+.splash img {
+    width: 100%;
+    max-width: none;
+    position: absolute;
+    margin: auto;
+}
 p {
    font-family: Abadi MT Condensed Light, sans-serif;
     line-height: 1.5rem;
@@ -37,7 +41,7 @@ h2 {
     font-size: 2.5rem;
     text-align: center;
     font-weight: 100;
-    color: #FFFFFF;
+    color: #2F363E;
 }
 
 h4 {
@@ -70,6 +74,7 @@ ul {
      line-height: 70px;
      border-bottom: 1px solid #FFFFFF;
     }
+
 
 #menu a:hover {
     color: #E86F43;
@@ -130,21 +135,25 @@ h5 {
 /* FORSIDE */
 
 #start_sektion {
-    background-color: #2F363E;
     height: 150vw;
     margin-top: 20vw;
 }
 #start_sektion h2 {
-    padding-top: 7vw;
+    position: absolute;
+    top: 1vw;
+   left: 4vw;
 }
 
 .button {
     background-color: #E86F43;
     cursor: pointer;
     padding: 4vw;
-    margin: 90vw 15vw 5vw 15vw;
     border-radius: 25px;
     text-align: center;
+    position: absolute;
+    width: 30vw;
+    left: 30vw;
+    top: 180vw;
 
 }
 .button a {
@@ -153,6 +162,7 @@ h5 {
 
 }
 .infografik img {
+
     width: 100%;
 }
 
@@ -175,6 +185,9 @@ h5 {
 
 .infografik2 {
     display: none;
+}
+.top {
+    margin-top: 50vw;
 }
 
 /* OM OS */
@@ -223,6 +236,8 @@ input {
     margin: 2vw 2vw 7vw 2vw;
     cursor: pointer;
     text-align: left;
+    color: #F7F5F5;
+    width: 88vw;
 
 }
 
@@ -233,8 +248,8 @@ input a {
     font-size: 0.7rem;
 }
 
-input placeholder a {
-
+input::placeholder{
+    color:  #F7F5F5;
 }
 
 .tilmeldbutton a {
@@ -289,6 +304,10 @@ input placeholder a {
     margin: 25vw 4vw 5vw 4vw;
 }
 
+.merchchandise img {
+    width: 95%;
+    margin: 3vw;
+}
 
 @media only screen and (min-width:750px) {
     .burger-button {
@@ -310,12 +329,13 @@ input placeholder a {
         background-color: #F7F5F5;
         top: 0.6vw;
         right: 0;
-        width: 50vw;
+        width: 60vw;
         height: 0vw;
 
     }
     header {
         height: 11vw;
+        width: 100%;
     }
 
 
@@ -323,7 +343,13 @@ input placeholder a {
         margin-top: -1vw;
     }
     .button {
-        margin-top: 50vw;
+     top: 35vw;
+        left: 4vw;
+    }
+
+    .splash img {
+        margin: auto 0;
+        width: 100
     }
 
     #start_sektion {
@@ -333,7 +359,7 @@ input placeholder a {
     }
     #start_sektion h2 {
         position: relative;
-        top: 1vw;
+        top: 5vw;
     }
 
     .button {
@@ -370,6 +396,9 @@ input placeholder a {
          display: block;
     }
 
+    .top {
+        margin-top: 25vw;
+    }
 
     #infotekst {
         padding: 5vw 3vw 5vw 3vw;
@@ -391,14 +420,23 @@ input placeholder a {
         flex-grow: 400px;
         flex-basis: 1;
     }
-
+    .some_ikoner {
+        margin-top: 5vw
+    }
     .some_ikoner img {
-        width: 10%;
-        float: center;
-        display: block;
-        margin: 2vw 15vw 2vw 15vw;
+        width: 15%;
+        margin: 2vw 5vw 2vw 5vw;
 
 }
+    footer {
+        height: 30vw;
+    }
+    .sektion {
+        margin: 0 5vw 0 5vw;
+        flex-basis: 200px;
+
+    }
+
 
     /* TILMELDING */
 
@@ -434,9 +472,7 @@ input placeholder a {
         flex-grow: 200px;
         flex-basis: 1:
     }
-    footer {
-        height: 15vw;
-    }
+
     klistremaerke_tekst {
         flex-grow: 200px;
         flex-basis: 1:
